--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -43,7 +43,7 @@
 
 <h2 class="h4 mb-3">Quick actions</h2>
 <div class="row g-3 mb-5">
-    <div class="col-12 col-md-3"><a class="btn btn-primary w-100" href="{{ url_for('admin.add_product') }}">Add product</a></div>
+    <div class="col-12 col-md-3"><a class="btn btn-outline-primary w-100" href="{{ url_for('admin.products') }}">Manage products</a></div>
     <div class="col-12 col-md-3"><a class="btn btn-outline-primary w-100" href="{{ url_for('admin.categories') }}">Manage categories</a></div>
     <div class="col-12 col-md-3"><a class="btn btn-outline-primary w-100" href="{{ url_for('admin.blog_posts') }}">Manage blog</a></div>
     <div class="col-12 col-md-3"><a class="btn btn-outline-primary w-100" href="{{ url_for('admin.documents_admin') }}">Manage documents</a></div>
